--- a/Pipfile
+++ b/Pipfile
@@ -10,6 +10,7 @@ django = "*"
 gunicorn = "*"
 django-bootstrap4 = "*"
 djangorestframework = "*"
+python-dateutil = "*"
 
 [requires]
 python_version = "3.7"
